[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "pyauthx"
dynamic = ["version"]
description = "Modern auth toolkit for Python — secure JWT, refresh tokens, etc..."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Brian Alegre", email = "brianalegredev@gmail.com" }]
maintainers = [{ name = "Brian Alegre", email = "brianalegredev@gmail.com" }]
dependencies = ["cryptography>=45.0.6", "pydantic>=2.11.7", "pyjwt>=2.10.1"]

[project.urls]
Homepage = "https://github.com/hexguard/pyauthx"
Repository = "https://github.com/hexguard/pyauthx"
"Issue tracker" = "https://github.com/hexguard/pyauthx/issues"
Changelog = "https://github.com/hexguard/pyauthx/releases"

[dependency-groups]
dev = ["pytest>=8.4.1", "ruff==0.12.9", "taskipy==1.14.1"]
docs = []
prometheus = ["prometheus-client>=0.22.1"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
version-source = "git-tag"
fallback-version = "0.0.0.dev0"
dirty-suffix = ".dirty"

[tool.hatch.build]
include = ["pyauthx/py.typed"]

[tool.hatch.build.targets.wheel]
packages = ["pyauthx/"]

[tool.taskipy.tasks]
test = "pytest"
lint = "ruff check ."
publish = "uv publish"
docs = "mkdocs serve"

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = ["tests/", "examples/", "docs/"]

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = ["D212", "D107", "COM812"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F403"]
